# electroporation

./: CMakeLists.txt  Cm  Makefile  README.md  README.txt  Vm  averga_psi  c0  c1  electricfield.mod  electricfield_mod.f90  fort.2  input  input_elec  main.f90  modelA  one_pore  out_0  out_1000  out_10000  out_11000  out_12000  out_13000  out_14000  out_15000  out_16000  out_17000  out_18000  out_19000  out_2000  out_20000  out_21000  out_22000  out_23000  out_24000  out_25000  out_26000  out_27000  out_28000  out_29000  (+88 more)
inputs/: input  input.nml  input_elec  one_pore256 .txt  small_pore256
scripts/: Contour2Area.m  radius.m  surff.m
src/: electricfield_mod.f90  solver_mod.f90  util_mod.f90  variables_mod.f90
